# rust-capnproto

./: .gitignore  Cargo.toml  README.md  build.rs
schema/: bar.capnp  foo.capnp
src/: main.rs
src/schemas/: mod.rs
