[package]
name = "rust-capnproto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.17" # Note this is a different library than capnp*c*

[build-dependencies]
capnpc = "0.17"